Lab 3 Fragments Lab
Completed Lab 3 work

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ proguard/
 
 # Emacs backup files
 *.*~
+Fragments/FragmentsLabSubmit.zip
+Fragments/FragmentsLabSubmit/FragmentsLab/MainActivity.java
