--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ proguard/
 *.*~
 Fragments/FragmentsLabSubmit.zip
 Fragments/FragmentsLabSubmit/FragmentsLab/MainActivity.java
+Intents/IntentsLabSubmit.zip
