Lab 3c Fragments Lab

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ proguard/
 Fragments/FragmentsLabSubmit.zip
 Fragments/FragmentsLabSubmit/FragmentsLab/MainActivity.java
 Intents/IntentsLabSubmit.zip
+Permissions/PermissionsLabSubmit.zip
+AsyncTask/AsyncTaskLabSubmit.zip
